--- a/front-office/package.json
+++ b/front-office/package.json
@@ -3,12 +3,14 @@
       "version": "0.1.0",
       "private": true,
       "dependencies": {
+            "@react-google-maps/api": "^2.20.6",
             "@testing-library/dom": "^10.4.0",
             "@testing-library/jest-dom": "^6.6.3",
             "@testing-library/react": "^16.3.0",
             "@testing-library/user-event": "^13.5.0",
             "bootstrap": "^5.3.5",
             "framer-motion": "^12.9.2",
+            "prop-types": "^15.8.1",
             "react": "^19.1.0",
             "react-bootstrap": "^2.10.9",
             "react-dom": "^19.1.0",
