--- a/front-office/package.json
+++ b/front-office/package.json
@@ -14,6 +14,7 @@
             "react": "^19.1.0",
             "react-bootstrap": "^2.10.9",
             "react-dom": "^19.1.0",
+            "react-photo-view": "^1.2.7",
             "react-router-dom": "^7.5.1",
             "react-scripts": "5.0.1",
             "sass": "^1.87.0",
