--- a/front-office/.env.development
+++ b/front-office/.env.development
@@ -1,5 +1,5 @@
 # .env.development
+REACT_APP_API_URL=http://localhost:8000/api
 # REACT_APP_API_URL=http://localhost:8000/api
-REACT_APP_API_URL=https://fmed.magservices-mali.org/api
 
 
