--- a/back-office/config/packages/nelmio_cors.yaml
+++ b/back-office/config/packages/nelmio_cors.yaml
@@ -1,8 +1,8 @@
 nelmio_cors:
     defaults:
-        origin_regex: true
+        origin_regex: false
         #allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-        allow_origin: ['http://localhost:3000']
+        allow_origin: ['*']
         allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
         allow_headers: ['Content-Type', 'Authorization']
         expose_headers: ['Link']
