--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,30 +10,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-    - name: Install dependencies (React front-office)
-      working-directory: ./front-office
-      run: npm install
+      - name: Install dependencies (React front-office)
+        working-directory: ./front-office
+        run: npm install
 
-    - name: Build the React app
-      working-directory: ./front-office
-      run: npm run build
+      - name: Build the React app
+        working-directory: ./front-office
+        run: npm run build
 
-    - name: Set up SSH key
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.CPANEL_SSH_KEY }}" > ~/.ssh/id_ed25519
-        chmod 600 ~/.ssh/id_ed25519
-        ssh-keyscan -H fmed.ml >> ~/.ssh/known_hosts
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.CPANEL_SSH_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -H fmed.ml >> ~/.ssh/known_hosts
 
-    - name: Deploy build folder to cPanel
-      run: |
-        scp -r ./front-office/build/* fmed86@fmed.ml:/home/fmed86/public_html/
+      - name: Deploy build folder to cPanel
+        run: |
+          scp -r ./front-office/build/* fmed86@fmed.ml:/home/fmed86/public_html/
 
+      # Deploy Symfony backend to cPanel (adjust path as needed)
+      - name: Deploy Symfony backend to cPanel
+        run: |
+          scp -r ./back-office/* fmed86@fmed.ml:/home/fmed86/back.fmed.ml/
