--- a/front-office/package.json
+++ b/front-office/package.json
@@ -10,10 +10,13 @@
             "@testing-library/user-event": "^13.5.0",
             "bootstrap": "^5.3.5",
             "framer-motion": "^12.9.2",
+            "i18next": "^21.9.2",
+            "i18next-browser-languagedetector": "^6.1.5",
             "prop-types": "^15.8.1",
             "react": "^19.1.0",
             "react-bootstrap": "^2.10.9",
             "react-dom": "^19.1.0",
+            "react-i18next": "^11.18.4",
             "react-photo-view": "^1.2.7",
             "react-router-dom": "^7.5.1",
             "react-scripts": "5.0.1",
